# lonesome-lights

./: .scm9
lonesomelights/: .gitignore  LICENSE  Makefile.am  README  configure-cip.sh  configure-default.sh  configure.ac  print-lines-of-code.sh
lonesomelights/include/: timer.h  updatable.h
lonesomelights/include/game/: attackable.h  client_game.h  game.h  game_object.h  hud.h  loading_screen.h  player.h  player_handler.h  server_game.h  skybox.h  unit.h
lonesomelights/include/game/game_objects/: unit.h
lonesomelights/include/game/map/: base_tile.h  crystal_tile.h  destructable_rock_tile.h  destructible_rock_tile.h  floor_tile.h  indestructible_rock_tile.h  map.h  rock_tile.h  tile.h  undestructable_rock_tile.h
lonesomelights/include/game/units/: crystal.h  laser_unit.h  selection_circle.h  shockwave.h  shockwave_unit.h  unit.h  worker_unit.h
lonesomelights/include/geometry/: camera.h  constant_accelerating_movement.h  constant_movement.h  game_camera.h  inertial_movable.h  inertial_movement.h  map_camera.h  movement.h  path_finder.h  perspective_camera.h  transformable.h
lonesomelights/include/networking/: client.h  network_handler.h  network_id.h  network_packet.h  networkable.h  participant.h  server.h
lonesomelights/include/networking/network_handlers/: client_handler.h  server_handler.h
lonesomelights/include/networking/network_handlers/client_handlers/: game_client_handler.h  unit_client_handler.h
lonesomelights/include/networking/network_handlers/server_handlers/: game_server_handler.h  unit_server_handler.h
lonesomelights/include/rendering/: deferred_drawable.h  drawable.h
lonesomelights/include/rendering/obj_loader/: obj_loader.h
lonesomelights/include/rendering/opengl/: fragment_shader.h  frame_buffer_object.h  render_program.h  render_programs.h  shader.h  texture.h  textures.h  vertex_array_object.h  vertex_buffer_object.h  vertex_buffer_object.tpp  vertex_buffer_objects.h  vertex_shader.h
lonesomelights/include/rendering/particles/: health_bar_particle_emitter.h  linear_particle_emitter.h  particle.h  particle_emitter.h  spheric_particle_emitter.h
lonesomelights/include/rendering/particles/particle_systems/: explosion.h  laser.h  smoke.h
lonesomelights/res/: Makefile.am
lonesomelights/res/maps/: default_map.txt
lonesomelights/res/models/: crystals.mtl
lonesomelights/res/shaders/: deferred_fragment.glsl  deferred_particle_emitter_fragment.glsl  deferred_particle_emitter_vertex.glsl  deferred_vertex.glsl  floor_tile_fragment.glsl  floor_tile_vertex.glsl  health_bar_particle_emitter_fragment.glsl  hud_fragment.glsl  hud_vertex.glsl  linear_particle_emitter_fragment.glsl  map_fragment.glsl  map_vertex.glsl  particle_emitter_fragment.glsl  particle_emitter_vertex.glsl  rock_tile_fragment.glsl  rock_tile_vertex.glsl  selection_circle_fragment.glsl  selection_circle_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  spheric_particle_emitter_fragment.glsl  test_fragment.glsl  test_vertex.glsl  tile_fragment.glsl  tile_vertex.glsl  unit_fragment.glsl  unit_vertex.glsl
lonesomelights/src/: Makefile.am  client_main.cpp  server_main.cpp  timer.cpp  updatable.cpp
lonesomelights/src/game/: attackable.cpp  client_game.cpp  game.cpp  game_object.cpp  hud.cpp  loading_screen.cpp  old_game.cpp  player.cpp  player_handler.cpp  server_game.cpp  skybox.cpp  unit.cpp
lonesomelights/src/game/game_objects/: unit.cpp
lonesomelights/src/game/map/: base_tile.cpp  crystal_tile.cpp  destructable_rock_tile.cpp  destructible_rock_tile.cpp  floor_tile.cpp  indestructible_rock_tile.cpp  map.cpp  rock_tile.cpp  tile.cpp  undestructable_rock_tile.cpp
lonesomelights/src/game/units/: crystal.cpp  laser_unit.cpp  selection_circle.cpp  shockwave.cpp  shockwave_unit.cpp  unit.cpp  worker_unit.cpp
lonesomelights/src/geometry/: camera.cpp  constant_accelerating_movement.cpp  constant_movement.cpp  game_camera.cpp  inertial_movable.cpp  inertial_movement.cpp  map_camera.cpp  movement.cpp  path_finder.cpp  perspective_camera.cpp  transformable.cpp
lonesomelights/src/networking/: client.cpp  network_handler.cpp  network_id.cpp  network_packet.cpp  networkable.cpp  participant.cpp  server.cpp
lonesomelights/src/networking/network_handlers/: client_handler.cpp  server_handler.cpp
lonesomelights/src/networking/network_handlers/client_handlers/: game_client_handler.cpp  unit_client_handler.cpp
lonesomelights/src/networking/network_handlers/server_handlers/: game_server_handler.cpp  unit_server_handler.cpp
lonesomelights/src/rendering/: deferred_drawable.cpp  drawable.cpp
lonesomelights/src/rendering/obj_loader/: obj_loader.cpp  tiny_obj_loader.cpp
lonesomelights/src/rendering/opengl/: fragment_shader.cpp  frame_buffer_object.cpp  render_program.cpp  render_programs.cpp  shader.cpp  texture.cpp  textures.cpp  vertex_array_object.cpp  vertex_buffer_objects.cpp  vertex_shader.cpp
lonesomelights/src/rendering/particles/: health_bar_particle_emitter.cpp  linear_particle_emitter.cpp  particle.cpp  particle_emitter.cpp  spheric_particle_emitter.cpp
lonesomelights/src/rendering/particles/particle_systems/: explosion.cpp  laser.cpp  smoke.cpp
lonesomelights/src/rendering/tinyobjloader/: tiny_obj_loader.cpp
