EXTRA_DIST = \
	models/unit_0.mtl
	models/unit_0.obj
	\
	shaders/map_fragment.glsl \
	shaders/map_vertex.glsl \
	shaders/particle_emitter_fragment.glsl \
	shaders/particle_emitter_vertex.glsl \
	shaders/test_fragment.glsl \
	shaders/test_vertex.glsl \
	shaders/tile_fragment.glsl \
	shaders/tile_vertex.glsl
	\
	textures/floor_tile.png
	textures/rock_tile.png
