EXTRA_DIST = \
	models/unit_0.mtl
	models/unit_0.obj
	\
	shaders/deferred_particle_emitter_vertex.glsl \
	shaders/deferred_particle_emitter_fragment.glsl \
	shaders/deferred_fragment.glsl \
	shaders/deferred_vertex.glsl \
	shaders/floor_tile_fragment.glsl \
	shaders/floor_tile_vertex.glsl \
	shaders/linear_particle_emitter_fragment.glsl \
	shaders/particle_emitter_vertex.glsl \
	shaders/rock_tile_fragment.glsl \
	shaders/rock_tile_vertex.glsl \
	shaders/spheric_particle_emitter_fragment.glsl \
	shaders/test_fragment.glsl \
	shaders/test_vertex.glsl \
	shaders/tile_fragment.glsl \
	shaders/tile_vertex.glsl
	shaders/unit_fragment.glsl \
	shaders/unit_vertex.glsl
	\
	textures/floor_tile.png
	textures/rock_tile.png
	textures/particles/flash.png
	textures/particles/laser.png
	textures/particles/smoke.png
	textures/particles/smoke_trail.png
	textures/particles/spark.png
